# SimpleProjectSkeleton

./: CMakeLists.txt
cmake/: Toolchain-cross-mingw32-linux.cmake
conan/: linux_to_windows.conanprofile
src/: CMakeLists.txt  main.cpp
